load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "assert_exp_test",
    srcs = ["assert_exp_test.cpp"],
    deps = [
        "//:assert",
        "@boost//core",
    ],
)

cc_test(
    name = "assert_msg_exp_test",
    srcs = ["assert_msg_exp_test.cpp"],
    deps = [
        "//:assert",
        "@boost//core",
    ],
)

cc_test(
    name = "verify_exp_test",
    srcs = ["verify_exp_test.cpp"],
    deps = [
        "//:assert",
        "@boost//core",
    ],
)

cc_test(
    name = "verify_msg_exp_test",
    srcs = ["verify_msg_exp_test.cpp"],
    deps = [
        "//:assert",
        "@boost//core",
    ],
)
